--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,2 +1,2 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 Evolvability is the property of a system that specifies its capacity to have its architecture shaped by natural selection~\cite{Wagner2008b}. This is one of the key properties that is considered to distinguish living systems from non-living ones. On one hand, this property obviously implies of a system that its architecture is capable of change. However, from an information theoretic, and thus thermodynamic, perspective, it may be considered that the mechanism capable of maintaining an identity in the form of memory via error correction or repair is a much more difficult necessary condition to be satisfied~\cite{Gacs2001}. Here we argue that one necessary precondition for evolvability and thus for evolutionary processes, which has been previously suggested to be a definitive characteristic of life~\cite{Rosen1972,Rosen1991,Zafiris2012,Mossio2009,Letelier2006} is what we refer to as ``functional closure''. We consider formal languages capable of expressing the functional closure property and then ask, among all languages capable of its expression, which is the language of minimal expressive power?  We do not answer this question conclusively, but discuss potential lower and upper bounds that point to consideration of the conceptual space between the simply-typed and type-free lambda calculi~\cite{Barendregt1985}. We describe how investigation of languages with expressive power lying between these two extremes may be undertaken using tools of modern categorical logic~\cite{Crole1994a,Awodey2006}.
