--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 \subsection*{Categorical semantics for type theory, more generally}
 We have presented two particular cases of a more general paradigm referred to as categorical semantics (for logic or type theory). In a slightly more general situation we can imagine that a \emph{basic language} $\mathcal{L}$ consists of basic types and basic terms with type assignments \cite{Awodey2000}. A (type) \emph{theory} $\mathbb{T}$ consists of a set of basic type symbols, a set of basic terms, typed over the basic types, and a set of equations between terms in the language $\mathcal{L}[\mathbb{T}]$ of all terms over the basic language of basic types and terms.
 
