--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 The capacities have been demonstrated to chemically synthesize and transplant genomes to alter organismal identity \cite{Gibson2010} and to execute simulations of the life cycle of a single-celled organism \cite{Karr2012} by collecting measurements of a large number of parameter values conveying detailed information about its underlying processes and integrating them into presumably analogous coupled algorithmic processes. These capacities and the technologies that may result from them add to the mounting pressure underlying the very existence of the field of systems biology to ask, in an effort to synthesize knowledge from an enormous number of empirical investigations, whether or not we can abstract properties that are necessary, and perhaps sufficient, for determining a process capable of generating organisms \emph{de novo}. Answering questions like this one are crucial for clarifying hypotheses germane to understanding what is required in order to explain the origin and distinguishing characteristics of life and thus the origin and nature of evolutionary processes.
 
 Very few biologists or other scientists dispute that evolution is the most fundamental organizing concept in biology. In this light, it seems somewhat surprising that not even more effort than has already been exerted is invested in clarifying and formalizing increasingly detailed conceptions of its origins and operation. In order to understand biological systems, it will be necessary to address the question: What are the necessary enabling conditions that make biological evolution possible? The synthesis of some potential answers to this question may clarify a path toward defining a sufficient collection of preconditions for evolutionary processes to take flight.
