--- a/tex/metabolism.tex
+++ b/tex/metabolism.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=0.95\columnwidth]{fig/cellprocessesdiagram.pdf}
