--- a/tex/titleinfo.tex
+++ b/tex/titleinfo.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 \begin{flushleft}
 {\Large
 \textbf{A minimal language for functional closure and the origin of evolvability}
