--- a/tex/funcloseinvar.tex
+++ b/tex/funcloseinvar.tex
@@ -1,4 +1,4 @@
-%!TEX root = ../plos_template.tex
+%!TEX root = ../notes.tex
 \subsection*{Functional closure as a potentially invariant property of evolvable systems}
 
 In this section, we will attempt to explain the functional closure property in category theoretic terms. We will describe this property in the setting of a cartesian closed category (see Materials and Methods). Cartesian closed categories provide mathematical semantics for the simply typed lambda calculus \cite{Barendregt1985}. We will therefore sometimes refer to this setting as being ``typed''. This terminology is used to contrast the description in this section in terms of a cartesian closed category, which could be given equally well in terms of simply typed lambda calculus, with that in the next section in terms of the untyped lambda calculus. The abstract components have been related to biological ones in the previous section. The biological property from which Rosen derived his diagram expressing the functional closure concept is metabolism regarded in the manner described above and as depicted in \ref{fig:metabolicstringdiag}. A metabolic mapping in an evolvable system $\mathcal{E}$ can be thought of as a morphism between two objects in $\mathcal{E}$, the latter now regarded as an abstract algebraic category:
@@ -124,7 +124,7 @@ which is a particular instantiation of a more general phenomenon referred to as 
 
 Given these restrictions, it is obvious that it will not be sufficient in the search for non-trivial models of the type-free theory of the $\lambda$-calculus to restrict consideration to the category $\mathbf{Sets}$ because in such a category $F$ has a fixed point $D$ only when $D$ is the one element set: $D = \{*\}$. However, $\mathbb{T}$ does not necessarily prove $\lambda y.ir(y)=\lambda y.y$, which would be true for $D = \{*\}$. Because something provable in $\mathbf{Sets}$ is not necessarily provable in the type-free $\lambda$-calculus there is no sense in which semantics in the category $\mathbf{Sets}$ could be complete with respect to the type-free $\lambda$-calculus.
 
-We will very briefly sketch the solution to this particular problem and refer to other sources for caveats and details~\cite{Barendregt1985,Smyth1982,Freyd1990,Abramsky1995,Cattani2007}. In order to remedy this situation Scott eventually introduced \emph{domains}, which can be viewed as \emph{continuous lattices} (this construction appears with minor modifications with respect to the purpose of the present exposition in terms of various other closely related kinds of objects and their associated categories such as complete partial orders and complete lattices among others). A continuous lattice is a complete \todo{Include appropriate definitions from lattice theory (e.g. lattice, meet, join, completeness, etc.)} lattice $D$ such that
+We will very briefly sketch the solution to this particular problem and refer to other sources for caveats and details~\cite{Barendregt1985,Smyth1982,Freyd1990,Abramsky1995,Cattani2007}. Here we follow \cite{Hindley2006}. In order to remedy this situation Scott eventually introduced \emph{domains}, which can be viewed as \emph{continuous lattices} (this construction appears with minor modifications with respect to the purpose of the present exposition in terms of various other closely related kinds of objects and their associated categories such as complete partial orders and complete lattices among others). A continuous lattice is a complete \todo{Include appropriate definitions from lattice theory (e.g. lattice, meet, join, completeness, etc.)} lattice $D$ such that
 $$
 \forall d \in D, d = \bigvee \left\{ \bigwedge U | d \in U, U \mbox{ Scott-open}, U \subseteq D \right\}
 $$
